# libsauros

./: CMakeLists.txt  LICENSE  README.md
.circleci/: config.yml
.github/: pull_request_template.md
cmake/: CheckGit.cmake  LibraryConfig.cmake
example/: main.cpp
libsauros/: cell.cpp  cell.hpp  driver.cpp  driver.hpp  environment.cpp  environment.hpp  exceptions.hpp  system.cpp  system.hpp  types.hpp
libsauros/RLL/: rll_wrapper.hpp
libsauros/capi/: capi.cpp  capi.hpp
libsauros/front/: parser.cpp  parser.hpp
libsauros/package/: package.cpp  package.hpp
libsauros/processor/: processor.cpp  processor.hpp  processor_builtins.cpp  processor_load_package.cpp
libsauros/system/: system.cpp
test_app/: CMakeLists.txt  README.md  main.cpp
